[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypernode-sdk"
version = "1.0.0"
description = "Official Python SDK for Hypernode decentralized compute network"
readme = "README.md"
authors = [{name = "Hypernode Team", email = "contact@hypernodesolana.org"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["hypernode", "solana", "ai", "ml", "compute", "decentralized"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "solders>=0.18.0",
    "solana>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://hypernodesolana.org"
Repository = "https://github.com/Hypernode-sol/hypernode-sdk-python"
